feat(referral): add support for generating referrals from selected content
Introduce a new feature that allows users to generate referral requests by selecting job content on any website. This includes:
- Adding a new context menu option for content selection
- Extending the state management to handle selected content
- Updating UI components to support content-based referral generation
- Modifying the README and welcome page to reflect the new functionality

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "JobRefMe - Referral Request Generator",
-  "description": "Generate personalized job referral request messages from HireJobs.in postings",
+  "description": "Generate personalized job referral request messages from any job posting or HireJobs.in",
   "version": "1.0.0",
   "icons": {
     "16": "icon-16.png",
@@ -21,7 +21,8 @@
   "permissions": [
     "activeTab",
     "storage",
-    "scripting"
+    "scripting",
+    "contextMenus"
   ],
   "host_permissions": [
     "https://hirejobs.in/*",
